samples/_failures_safe/1761307362_1ecdca_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_6e036d4c.c: In function ‘main’:
./samples/SAFE/__tmp_6e036d4c.c:168:5: error: expected ‘,’ or ‘;’ at end of input
  168 |     size_t len = strlen
      |     ^~~~~~
./samples/SAFE/__tmp_6e036d4c.c:168:5: error: expected declaration or statement at end of input
